building out login

--- a/sampler/src/components/SignUpForm/SignUpForm.css
+++ b/sampler/src/components/SignUpForm/SignUpForm.css
@@ -7,7 +7,7 @@
     --tan-4: #abc2cf;
     --orange: #F67F00;
     --text-light: #968c84;
-    --text-dark: #615954;
+    --text-dark: #d0cbc8;
   }
   
   *, *:before, *:after {
