--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -4,7 +4,7 @@
     --tan-1: #FBF9F6;
     --tan-2: #E7E2DD;
     --tan-3: #E2D9D1;
-    --tan-4: #abc2cf;
+    --tan-4: #1e2224;
     --orange: #F67F00;
     --text-light: #968c84;
     --text-dark: #d0cbc8;
