--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
+/* body {
+  margin: 0 auto;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+  min-width: 100px;
+  min-height: 50vh;
+} */
 
 h1 {
   font-size: 3.2em;
